# base-typed-string

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_usage.py  pickle_roundtrip.py  pydantic_roundtrip_from_dump.py  pydantic_runtime_vs_dump.py
src/base_typed_string/: __init__.py  _base_typed_string.py  _exceptions.py
tests/: test_constructor.py  test_internal_invariants.py  test_pickle_support.py  test_pydantic_support.py  test_runtime_behavior.py  testing_assertions.py  testing_types.py
