[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "base-typed-string"
version = "0.1.0"
description = "Strict typed string base class with exact runtime subtype preservation and optional Pydantic v2 support."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Eldeniz Guseinli", email = "eldenizfamilyanskicode@gmail.com" },
]
license = "MIT"
keywords = [
    "typing",
    "typed-string",
    "value-object",
    "pydantic",
    "domain-model",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
pydantic = [
    "pydantic>=2.6,<3",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
lint = [
    "ruff>=0.5",
]
typecheck = [
    "mypy>=1.10",
    "pyright>=1.1",
]
build = [
    "build>=1.2",
    "twine>=5.1",
]
dev = [
    "build>=1.2",
    "twine>=5.1",
    "mypy>=1.10",
    "pyright>=1.1",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "pydantic>=2.6,<3",
]

[project.urls]
Homepage = "https://github.com/eldenizfamilyanskicode/base-typed-string"
Repository = "https://github.com/eldenizfamilyanskicode/base-typed-string"
Issues = "https://github.com/eldenizfamilyanskicode/base-typed-string/issues"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["base_typed_string*"]

[tool.setuptools.package-data]
base_typed_string = ["py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "--strict-config",
    "--strict-markers",
    "--cov=base_typed_string",
    "--cov-report=term-missing",
]

[tool.coverage.run]
branch = true
source = ["base_typed_string"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 100

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["base_typed_string"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
strict = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_configs = true
warn_return_any = true
strict_equality = true
no_implicit_optional = true
allow_redefinition = false
show_error_codes = true
packages = ["base_typed_string"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
include = ["src", "tests"]
exclude = [
    "**/.*",
    "**/__pycache__/**",
    "venv/**",
    ".venv/**",
    "**/node_modules/**",
]